# cs240h-project

./: .ghci  README.md  mapreduce.cabal  parseini.cabal  setup.sh  stack.yaml
app/: Main.hs  RemoteProcess.hs  Server.hs  TfIdf.hs  TidalTest.hs  Web.hs  WordCount.hs
report/: architecture.eps  mapreduce.eps  report.bib  report.lyx
src/: DistributedMapReduce.hs  MapReduce.hs  ParallelMapReduce.hs  ParseIni.hs  PrettyPrintIni.hs  WordCount.hs
test/: Spec.hs
