name:                mapreduce
version:             0.1.0.0
synopsis:            Stanford CS240H Final Project
description:         Please see README.md
homepage:            cs240h.scs.stanford.edu
license:             BSD3
license-file:        LICENSE
author:              CS240H Staff
maintainer:          http://www.scs.stanford.edu/16wi-cs240h/
copyright:           2015 Riad S. Wahby
category:            unknown
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
 README.md
 stack.yaml

library
  hs-source-dirs:      src
  exposed-modules:     ParseIni, PrettyPrintIni, MapReduce, ParallelMapReduce, DistributedMapReduce
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , containers
                     , deepseq
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , hint
                     , network-transport-tcp
                     , parallel
                     , tidal
                     , transformers
                     , websockets >= 0.9.5
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures

executable mapreduce
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , attoparsec
                     , blaze-html
                     , bytestring
                     , containers
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , mapreduce
                     , network
                     , network-transport-tcp
                     , hint
                     , text
                     , tidal
  default-language:    Haskell2010

executable wordcount
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , attoparsec
                     , blaze-html
                     , bytestring
                     , containers
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , mapreduce
                     , network
                     , network-transport-tcp
                     , hint
                     , text
                     , tidal
  default-language:    Haskell2010

executable tidal-server
  hs-source-dirs:      app
  main-is:             Server.hs
  ghc-options:         -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mapreduce
                     , bytestring
                     , containers
                     , attoparsec
                     , happstack-lite
                     , hint
                     , network
                     , text
                     , tidal
                     , blaze-html
  default-language:    Haskell2010

test-suite mapreduce-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mapreduce
                     , bytestring
                     , containers
                     , attoparsec
                     , hspec
                     , QuickCheck
  ghc-options:         -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
